--- a/client/src/main/resources/ru/geekbrains/march/chat/client/window.fxml
+++ b/client/src/main/resources/ru/geekbrains/march/chat/client/window.fxml
@@ -9,10 +9,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
 <VBox fx:controller="ru.geekbrains.march.chat.client.Controller" xmlns:fx="http://javafx.com/fxml" alignment="CENTER">
+    <HBox fx:id="loginPanel">
+        <TextField  fx:id="usernameField" HBox.hgrow="ALWAYS" promptText="Укажите свой ник"/>
+        <Button text="Войти" onAction="#login"/>
+    </HBox>
     <TextArea fx:id="msgArea" VBox.vgrow="ALWAYS" editable="false"/>
-    <HBox>
-        <TextField  fx:id="msgField" HBox.hgrow="ALWAYS" promptText="Введите сообщение"/>
+    <HBox fx:id="msgPanel" visible="false" managed="false">
+        <TextField  fx:id="msgField" HBox.hgrow="ALWAYS" promptText="Введите сообщение" onAction="#sendMsg"/>
         <Button text="Отправить" onAction="#sendMsg"/>
     </HBox>
-
 </VBox>
