--- a/client/src/main/resources/ru/geekbrains/march/chat/client/window.fxml
+++ b/client/src/main/resources/ru/geekbrains/march/chat/client/window.fxml
@@ -8,14 +8,23 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <VBox fx:controller="ru.geekbrains.march.chat.client.Controller" xmlns:fx="http://javafx.com/fxml" alignment="CENTER">
     <HBox fx:id="loginPanel">
-        <TextField  fx:id="usernameField" HBox.hgrow="ALWAYS" promptText="Укажите свой ник"/>
+        <TextField  fx:id="usernameField" HBox.hgrow="ALWAYS" promptText="Укажите свой ник" onAction="#login"/>
         <Button text="Войти" onAction="#login"/>
     </HBox>
-    <TextArea fx:id="msgArea" VBox.vgrow="ALWAYS" editable="false"/>
-    <HBox fx:id="msgPanel" visible="false" managed="false">
+
+    <HBox VBox.vgrow="ALWAYS">
+        <TextArea fx:id="msgArea" HBox.hgrow="ALWAYS" editable="false" wrapText="true"/>
+        <ListView fx:id="clientList" prefWidth="200" maxWidth="200" minWidth="200"/>
+
+    </HBox>
+
+    <HBox fx:id="msgPanel">
         <TextField  fx:id="msgField" HBox.hgrow="ALWAYS" promptText="Введите сообщение" onAction="#sendMsg"/>
         <Button text="Отправить" onAction="#sendMsg"/>
+        <Button text="logout" onAction="#logoutBtnAction"/>
     </HBox>
+
 </VBox>
