--- a/client/src/main/resources/ru/geekbrains/march/chat/client/window.fxml
+++ b/client/src/main/resources/ru/geekbrains/march/chat/client/window.fxml
@@ -9,9 +9,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
 <VBox fx:controller="ru.geekbrains.march.chat.client.Controller" xmlns:fx="http://javafx.com/fxml" alignment="CENTER">
     <HBox fx:id="loginPanel">
-        <TextField fx:id="loginNameField" HBox.hgrow="ALWAYS" promptText="Укажите свой ник" onAction="#login"/>
+        <TextField fx:id="loginField" HBox.hgrow="ALWAYS" promptText="Введите имя пользователя" onAction="#login"/>
+        <PasswordField fx:id="passwordField" HBox.hgrow="ALWAYS" promptText="Введите пароль" onAction="#login"/>
         <Button text="Войти" onAction="#login"/>
     </HBox>
 
